# audio-qa-framework

./: README.md  pyproject.toml  scratch_metadata.py
.github/workflows/: tests.yml
docs/: acceptance-criteria.md  mvp-scope.md  severity-matrix.md  test-cases.md
reports/examples/: README.md  clean_sine_report.txt  clipping_report.txt  end_silence_report.txt  start_silence_report.txt
scripts/: generate-test-audio.py
src/audioqa/: cli.py  loader.py  models.py
src/audioqa/validators/: clipping.py  levels.py  metadata.py  silence.py
tests/: test_clipping.py  test_levels.py  test_loader.py  test_metadata.py  test_silence.py
