[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audioqa-framework"
version = "0.1.0"
description = "A Python Audio Quality Assurance Framework for validating audio files."
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "typer",
    "rich",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
audioqa = "audioqa.cli:app"